--- a/manual.html
+++ b/manual.html
@@ -146,6 +146,16 @@
       <li><code>form-control</code>, <code>btn btn-primary btn-lg</code> para formulário de conversão.</li>
     </ul>
 
+    <h2>✨ 5. Navegaçao em abas</h2>
+    <h3 class="fs-5 fw-lighter">🔧 <span>Como funciona:</span> O Bootstrap usa <span>JavaScript</span> e <span>classes CSS</span> específicas para mostrar e esconder o conteúdo conforme a aba clicada.</h3>
+    <ul>
+      <li><code>ul.nav-tabs</code>: cria a lista de abas com estilo tradicional de abas retas (tabs).</li>
+      <li><code>ul.nav-pills</code>: cria a lista de abas com estilo de "pílulas", com bordas arredondadas (pills). Usado na tag <code>ul</code>.</li>
+      <li><code>data-bs-toggle=tab</code> ou <code>data-bs-toggle=pill</code>: ativa o comportamento de troca de conteúdo. Ambos funcionam da mesma forma, mudando apenas o estilo.</li>
+      <li><code>div.tab-content</code>: envolve todos os conteúdos que serão mostrados/ocultados conforme a aba clicada.</li>
+      <li><code>div.tab-pane</code>: cada painel de conteúdo correspondente a uma aba (visível ou oculto dependendo da aba ativa).</li>
+    </ul>
+    
     <h2>💡 Dica Extra: Padrões de Classe</h2>
     <ul>
       <li><code>m</code> = margin | <code>p</code> = padding</li>
