--- a/manual.html
+++ b/manual.html
@@ -40,6 +40,11 @@
       margin-bottom: 0.5rem;
     }
 
+    span {
+      font-size: 1.2rem;
+      font-weight: 700;
+    }
+
     @media (max-width: 576px) {
       h1 {
         font-size: 1.5rem;
