--- a/manual.html
+++ b/manual.html
@@ -212,7 +212,6 @@
     </table>
 
     <h2>📝 7. Caroucel - slides</h2>
-    <h3 class="fs-5 fw-lighter">🔧 <span>Como funciona:</span> O Bootstrap usa <span>JavaScript</span> e <span>classes CSS</span> específicas para mostrar e esconder o conteúdo conforme a aba clicada.</h3>
     <ul>
       <li><code>carousel</code> e <code>carousel-inner</code>: são as classes principais para criar o carrossel e agrupar os itens.</li>
       <li>Cada <code> div class="carousel-item"></code> representa um item dentro do carrossel.</li>
@@ -221,6 +220,162 @@
       <li><code>data-ride="carousel"</code>: garante que o carrossel se inicie automaticamente.</li>
       <li><code> ol class="carousel-indicators"></code>: cada item dentro de <li> possui um link para um slide específico, usando <code>data-slide-to</code>.</li>
     </ul>
+
+     <h2>✉️  8. Cards</h2>
+    <h3>Quando usar card no Bootstrap:</h3>
+    <p>O componente <code>card</code> do Bootstrap é usado para exibir conteúdo de forma organizada, modular e estilizada, geralmente com: Título, Texto, Imagem, Botões e Links.</p>
+    <p>Exemplos de uso prático do card:</p>
+    <ol>
+      <li><span>Mostrar um produto</span> (ex: foto, nome, preço, botão "Comprar").</li>
+      <li><span>Exibir um perfil</span> (ex: avatar, nome, bio, links sociais).</li>
+      <li><span>Apresentar uma notícia</span> (ex: imagem, título, resumo, botão "Ler mais").</li>
+      <li><span>Listar serviços ou recursos de forma visual.</span></li>
+    </ol>
+     <table style="width: 100%; border-collapse: collapse; font-family: Arial, sans-serif;">
+  <thead>
+    <tr style="background-color: #f2f2f2;">
+      <th style="border: 1px solid #ccc; padding: 8px; text-align: left;">🔹 Classe</th>
+      <th style="border: 1px solid #ccc; padding: 8px; text-align: left;">Função</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 8px;"><code>card</code></td>
+      <td style="border: 1px solid #ccc; padding: 8px;">Container principal do card, que envolve todo o conteúdo.</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 8px;"><code>card-img-top</code></td>
+      <td style="border: 1px solid #ccc; padding: 8px;">Adiciona uma imagem no topo do card.</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 8px;"><code>card-body</code></td>
+      <td style="border: 1px solid #ccc; padding: 8px;">Área principal do card onde ficam o título, texto e botões.</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 8px;"><code>card-title</code></td>
+      <td style="border: 1px solid #ccc; padding: 8px;">Define o título principal do card.</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 8px;"><code>card-subtitle</code></td>
+      <td style="border: 1px solid #ccc; padding: 8px;">Subtítulo secundário, geralmente em estilo mais discreto.</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 8px;"><code>card-text</code></td>
+      <td style="border: 1px solid #ccc; padding: 8px;">Texto descritivo ou conteúdo principal.</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 8px;"><code>card-link</code></td>
+      <td style="border: 1px solid #ccc; padding: 8px;">Links estilizados dentro do card.</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 8px;"><code>list-group</code> + <code>list-group-item</code></td>
+      <td style="border: 1px solid #ccc; padding: 8px;">Cria uma lista formatada dentro do card (itens organizados).</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 8px;"><code>card-footer</code></td>
+      <td style="border: 1px solid #ccc; padding: 8px;">Rodapé do card, usado para informações adicionais ou ações.</td>
+    </tr>
+  </tbody>
+</table>
+
+<h2>⚙️  9. Modal, Dropdown e Container</h2>
+<table style="width: 100%; border-collapse: collapse; font-family: Arial, sans-serif;">
+  <thead>
+    <tr style="background-color: #f2f2f2;">
+      <th style="border: 1px solid #ccc; padding: 8px; text-align: left;">✅ Classe / Atributo</th>
+      <th style="border: 1px solid #ccc; padding: 8px; text-align: left;">Função</th>
+    </tr>
+  </thead>
+  <tbody>
+    <!-- Modal -->
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 8px;"><code>.modal</code></td>
+      <td style="border: 1px solid #ccc; padding: 8px;">Classe base para o modal.</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 8px;"><code>.modal-dialog</code></td>
+      <td style="border: 1px solid #ccc; padding: 8px;">Define o contêiner do modal.</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 8px;"><code>.modal-lg</code></td>
+      <td style="border: 1px solid #ccc; padding: 8px;">Torna o modal grande.</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 8px;"><code>.modal-sm</code></td>
+      <td style="border: 1px solid #ccc; padding: 8px;">Torna o modal pequeno.</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 8px;"><code>.modal-dialog-centered</code></td>
+      <td style="border: 1px solid #ccc; padding: 8px;">Centraliza o modal na tela.</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 8px;"><code>data-bs-backdrop="static"</code></td>
+      <td style="border: 1px solid #ccc; padding: 8px;">Impedir o fechamento do modal ao clicar fora dele.</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 8px;"><code>.modal-dialog-scrollable</code></td>
+      <td style="border: 1px solid #ccc; padding: 8px;">Adiciona rolagem ao conteúdo do modal.</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 8px;"><code>.fade</code></td>
+      <td style="border: 1px solid #ccc; padding: 8px;">Aplica um efeito de transição suave.</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 8px;"><code>.modal-header</code></td>
+      <td style="border: 1px solid #ccc; padding: 8px;">Define a seção do cabeçalho do modal (geralmente contém o título e o botão de fechar).</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 8px;"><code>.modal-body</code></td>
+      <td style="border: 1px solid #ccc; padding: 8px;">Define a seção principal do conteúdo do modal.</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 8px;"><code>.modal-footer</code></td>
+      <td style="border: 1px solid #ccc; padding: 8px;">Define a seção de rodapé do modal (geralmente contém botões de ação, como "Cancelar" ou "Salvar").</td>
+    </tr>
+    <!-- Dropdown -->
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 8px;"><code>.dropdown</code></td>
+      <td style="border: 1px solid #ccc; padding: 8px;">Classe base para o dropdown.</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 8px;"><code>.dropdown-toggle</code></td>
+      <td style="border: 1px solid #ccc; padding: 8px;">Classe usada no botão que aciona o dropdown.</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 8px;"><code>.dropdown-menu</code></td>
+      <td style="border: 1px solid #ccc; padding: 8px;">Contêiner para os itens do menu suspenso.</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 8px;"><code>.dropdown-item</code></td>
+      <td style="border: 1px solid #ccc; padding: 8px;">Define cada item dentro do menu suspenso.</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 8px;"><code>.dropdown-header</code></td>
+      <td style="border: 1px solid #ccc; padding: 8px;">Usado para criar um cabeçalho no menu.</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 8px;"><code>.disabled</code></td>
+      <td style="border: 1px solid #ccc; padding: 8px;">Desabilita um item, tornando-o não clicável.</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 8px;"><code>.dropdown-menu-end</code></td>
+      <td style="border: 1px solid #ccc; padding: 8px;">Alinha o menu à direita.</td>
+    </tr>
+    <!-- Container -->
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 8px;"><code>.container</code></td>
+      <td style="border: 1px solid #ccc; padding: 8px;">Contêiner fixo com margens automáticas para centralização.</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 8px;"><code>.container-fluid</code></td>
+      <td style="border: 1px solid #ccc; padding: 8px;">Contêiner fluído, ocupa 100% da largura da tela.</td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid #ccc; padding: 8px;"><code>.container-{breakpoint}</code></td>
+      <td style="border: 1px solid #ccc; padding: 8px;">Usado para definir a largura do contêiner para diferentes breakpoints, ex: `.container-sm`.</td>
+    </tr>
+  </tbody>
+</table>
     
     <h2>💡 Dica Extra: Padrões de Classe</h2>
     <ul>
